# lotus-o3

./: .gitignore  CONTRIB.md  Cargo.toml  LICENSE.md  README.md  input.csv  occurrences_for_lotus.csv  occurrences_for_lotus_mod.csv  occurrences_for_lotus_mod_sub.csv  output.qs  test.qs
examples/input/: input.csv
examples/output/: output.qs  output_qs_url.txt  output_status.tsv
src/: chemical_entity.rs  cli.rs  csv_handler.rs  enrichment.rs  error.rs  main.rs  reference.rs  taxon.rs  wikidata.rs
src/chemical_entity/: structure.rs
src/reference/: crossref.rs
src/taxon/: normalizer.rs
src/wikidata/: checker.rs  writer.rs
