[package]
name = "lotus-o3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
indicatif = "0.17"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.19.1"
